# tradebot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: BTCUSD_1h_180d.csv  BTCUSD_1h_365d.csv  BTCUSD_1h_720d.csv  BTCUSD_1h_730d.csv
src/tradebot/: cli.py  config.py  logging_config.py
src/tradebot/bot/: runner.py
src/tradebot/data/: candles.py
src/tradebot/exchange/: __init__.py  coinbase_client.py  coinbase_jwt.py  errors.py
src/tradebot/execution/: trader.py
src/tradebot/scripts/: check_permissions.py  debug_key.py  hf_suite_hourly.py  method_tests.py
src/tradebot/strategies/: __init__.py  base.py  ema140_ema20_50.py  ema_filter.py  mtf_weekly_ema26_daily_20_50.py
src/tradebot/utils/: decimal_utils.py  time_utils.py
tests/: test_cli_strategy_selection.py  test_strategies_and_candles.py
